開いているファイル名をタイトルバーに表示
タイトルバーに現在アプリケーションが開いているファイルのファイル名を表示するように変更した。

--- a/Lyriser/Properties/Resources.resx
+++ b/Lyriser/Properties/Resources.resx
@@ -120,4 +120,10 @@
   <data name="LyricsFileFilter" xml:space="preserve">
     <value>テキストファイル|*.txt</value>
   </data>
+  <data name="TitleFormat" xml:space="preserve">
+    <value>{0} - Lyriser</value>
+  </data>
+  <data name="Untitled" xml:space="preserve">
+    <value>無題</value>
+  </data>
 </root>
