--- a/Lyriser/MainForm.ja-JP.resx
+++ b/Lyriser/MainForm.ja-JP.resx
@@ -312,26 +312,20 @@
   <data name="miParse.Text" xml:space="preserve">
     <value>解析(&amp;P)</value>
   </data>
-  <data name="miHighlightNext.Size" type="System.Drawing.Size, System.Drawing">
-    <value>229, 22</value>
-  </data>
   <data name="miHighlightNext.Text" xml:space="preserve">
     <value>次をハイライト(&amp;N)</value>
-  </data>
-  <data name="miHighlightPrevious.Size" type="System.Drawing.Size, System.Drawing">
-    <value>229, 22</value>
   </data>
   <data name="miHighlightPrevious.Text" xml:space="preserve">
     <value>前をハイライト(&amp;P)</value>
   </data>
-  <data name="sepOperation.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 6</value>
+  <data name="itmHighlightNextLine.Text" xml:space="preserve">
+    <value>次行をハイライト(&amp;E)</value>
+  </data>
+  <data name="itmHighlightPreviousLine.Text" xml:space="preserve">
+    <value>前行をハイライト(&amp;R)</value>
   </data>
   <data name="itmHighlightFirst.ShortcutKeyDisplayString" xml:space="preserve">
     <value />
-  </data>
-  <data name="itmHighlightFirst.Size" type="System.Drawing.Size, System.Drawing">
-    <value>229, 22</value>
   </data>
   <data name="itmHighlightFirst.Text" xml:space="preserve">
     <value>最初をハイライト(&amp;F)</value>
@@ -445,9 +439,5 @@
   </data>
   <data name="btnPaste.Text" xml:space="preserve">
     <value>貼り付け(&amp;P)</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
   </data>
 </root>
