--- a/Lyriser/MainForm.ja-JP.resx
+++ b/Lyriser/MainForm.ja-JP.resx
@@ -136,7 +136,7 @@
 </value>
   </data>
   <data name="miNew.Size" type="System.Drawing.Size, System.Drawing">
-    <value>195, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miNew.Text" xml:space="preserve">
     <value>新規作成(&amp;N)</value>
@@ -158,13 +158,13 @@
 </value>
   </data>
   <data name="miOpen.Size" type="System.Drawing.Size, System.Drawing">
-    <value>195, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miOpen.Text" xml:space="preserve">
     <value>開く(&amp;O)...</value>
   </data>
   <data name="sepFile1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>192, 6</value>
+    <value>181, 6</value>
   </data>
   <data name="miSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -183,46 +183,46 @@
 </value>
   </data>
   <data name="miSave.Size" type="System.Drawing.Size, System.Drawing">
-    <value>195, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miSave.Text" xml:space="preserve">
     <value>上書き保存(&amp;S)</value>
   </data>
   <data name="miSaveAs.Size" type="System.Drawing.Size, System.Drawing">
-    <value>195, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miSaveAs.Text" xml:space="preserve">
     <value>名前を付けて保存(&amp;S)...</value>
   </data>
   <data name="sepFile2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>192, 6</value>
+    <value>181, 6</value>
   </data>
   <data name="miExit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>195, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miExit.Text" xml:space="preserve">
     <value>終了(&amp;X)</value>
   </data>
   <data name="miFile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 20</value>
+    <value>66, 20</value>
   </data>
   <data name="miFile.Text" xml:space="preserve">
     <value>ファイル(&amp;F)</value>
   </data>
   <data name="miUndo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 22</value>
+    <value>183, 22</value>
   </data>
   <data name="miUndo.Text" xml:space="preserve">
     <value>元に戻す(&amp;U)</value>
   </data>
   <data name="miRedo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 22</value>
+    <value>183, 22</value>
   </data>
   <data name="miRedo.Text" xml:space="preserve">
     <value>やり直し(&amp;R)</value>
   </data>
   <data name="sepEdit1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>188, 6</value>
+    <value>180, 6</value>
   </data>
   <data name="miCut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -238,7 +238,7 @@
 </value>
   </data>
   <data name="miCut.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 22</value>
+    <value>183, 22</value>
   </data>
   <data name="miCut.Text" xml:space="preserve">
     <value>切り取り(&amp;T)</value>
@@ -258,7 +258,7 @@
 </value>
   </data>
   <data name="miCopy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 22</value>
+    <value>183, 22</value>
   </data>
   <data name="miCopy.Text" xml:space="preserve">
     <value>コピー(&amp;C)</value>
@@ -280,55 +280,73 @@
 </value>
   </data>
   <data name="miPaste.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 22</value>
+    <value>183, 22</value>
   </data>
   <data name="miPaste.Text" xml:space="preserve">
     <value>貼り付け(&amp;P)</value>
   </data>
   <data name="sepEdit2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>188, 6</value>
+    <value>180, 6</value>
   </data>
   <data name="miSelectAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 22</value>
+    <value>183, 22</value>
   </data>
   <data name="miSelectAll.Text" xml:space="preserve">
     <value>すべて選択(&amp;A)</value>
   </data>
   <data name="miEdit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 20</value>
+    <value>57, 20</value>
   </data>
   <data name="miEdit.Text" xml:space="preserve">
     <value>編集(&amp;E)</value>
   </data>
   <data name="miRenew.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>132, 22</value>
   </data>
   <data name="miRenew.Text" xml:space="preserve">
     <value>更新(&amp;R)</value>
   </data>
   <data name="miParse.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 20</value>
+    <value>58, 20</value>
   </data>
   <data name="miParse.Text" xml:space="preserve">
     <value>解析(&amp;P)</value>
   </data>
+  <data name="miHighlightNext.Size" type="System.Drawing.Size, System.Drawing">
+    <value>217, 22</value>
+  </data>
   <data name="miHighlightNext.Text" xml:space="preserve">
     <value>次をハイライト(&amp;N)</value>
+  </data>
+  <data name="miHighlightPrevious.Size" type="System.Drawing.Size, System.Drawing">
+    <value>217, 22</value>
   </data>
   <data name="miHighlightPrevious.Text" xml:space="preserve">
     <value>前をハイライト(&amp;P)</value>
   </data>
+  <data name="miHighlightNextLine.Size" type="System.Drawing.Size, System.Drawing">
+    <value>217, 22</value>
+  </data>
   <data name="miHighlightNextLine.Text" xml:space="preserve">
     <value>次行をハイライト(&amp;E)</value>
   </data>
+  <data name="miHighlightPreviousLine.Size" type="System.Drawing.Size, System.Drawing">
+    <value>217, 22</value>
+  </data>
   <data name="miHighlightPreviousLine.Text" xml:space="preserve">
     <value>前行をハイライト(&amp;R)</value>
+  </data>
+  <data name="sepOperation.Size" type="System.Drawing.Size, System.Drawing">
+    <value>214, 6</value>
+  </data>
+  <data name="miHighlightFirst.Size" type="System.Drawing.Size, System.Drawing">
+    <value>217, 22</value>
   </data>
   <data name="miHighlightFirst.Text" xml:space="preserve">
     <value>最初をハイライト(&amp;F)</value>
   </data>
   <data name="miOperation.Size" type="System.Drawing.Size, System.Drawing">
-    <value>62, 20</value>
+    <value>60, 20</value>
   </data>
   <data name="miOperation.Text" xml:space="preserve">
     <value>操作(&amp;O)</value>
@@ -436,9 +454,5 @@
   </data>
   <data name="btnPaste.Text" xml:space="preserve">
     <value>貼り付け(&amp;P)</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
   </data>
 </root>
