--- a/Lyriser/MainForm.ja-JP.resx
+++ b/Lyriser/MainForm.ja-JP.resx
@@ -117,13 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="tpView.Text" xml:space="preserve">
-    <value>表示</value>
-  </data>
-  <data name="tpEdit.Text" xml:space="preserve">
-    <value>編集</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="miFile.Size" type="System.Drawing.Size, System.Drawing">
+    <value>67, 20</value>
+  </data>
+  <data name="miFile.Text" xml:space="preserve">
+    <value>ファイル(&amp;F)</value>
+  </data>
   <data name="miNew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -203,26 +203,11 @@
   <data name="miExit.Text" xml:space="preserve">
     <value>終了(&amp;X)</value>
   </data>
-  <data name="miFile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>66, 20</value>
+  <data name="miEdit.Size" type="System.Drawing.Size, System.Drawing">
+    <value>57, 20</value>
   </data>
-  <data name="miFile.Text" xml:space="preserve">
-    <value>ファイル(&amp;F)</value>
-  </data>
-  <data name="miUndo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 22</value>
-  </data>
-  <data name="miUndo.Text" xml:space="preserve">
-    <value>元に戻す(&amp;U)</value>
-  </data>
-  <data name="miRedo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 22</value>
-  </data>
-  <data name="miRedo.Text" xml:space="preserve">
-    <value>やり直し(&amp;R)</value>
-  </data>
-  <data name="sepEdit1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 6</value>
+  <data name="miEdit.Text" xml:space="preserve">
+    <value>編集(&amp;E)</value>
   </data>
   <data name="miCut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -238,7 +223,7 @@
 </value>
   </data>
   <data name="miCut.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miCut.Text" xml:space="preserve">
     <value>切り取り(&amp;T)</value>
@@ -258,7 +243,7 @@
 </value>
   </data>
   <data name="miCopy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miCopy.Text" xml:space="preserve">
     <value>コピー(&amp;C)</value>
@@ -280,37 +265,25 @@
 </value>
   </data>
   <data name="miPaste.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miPaste.Text" xml:space="preserve">
     <value>貼り付け(&amp;P)</value>
   </data>
-  <data name="sepEdit2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 6</value>
+  <data name="sepEdit.Size" type="System.Drawing.Size, System.Drawing">
+    <value>181, 6</value>
   </data>
   <data name="miSelectAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>183, 22</value>
+    <value>184, 22</value>
   </data>
   <data name="miSelectAll.Text" xml:space="preserve">
     <value>すべて選択(&amp;A)</value>
   </data>
-  <data name="miEdit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>57, 20</value>
+  <data name="miOperation.Size" type="System.Drawing.Size, System.Drawing">
+    <value>60, 20</value>
   </data>
-  <data name="miEdit.Text" xml:space="preserve">
-    <value>編集(&amp;E)</value>
-  </data>
-  <data name="miRenew.Size" type="System.Drawing.Size, System.Drawing">
-    <value>132, 22</value>
-  </data>
-  <data name="miRenew.Text" xml:space="preserve">
-    <value>更新(&amp;R)</value>
-  </data>
-  <data name="miParse.Size" type="System.Drawing.Size, System.Drawing">
-    <value>58, 20</value>
-  </data>
-  <data name="miParse.Text" xml:space="preserve">
-    <value>解析(&amp;P)</value>
+  <data name="miOperation.Text" xml:space="preserve">
+    <value>操作(&amp;O)</value>
   </data>
   <data name="miHighlightNext.Size" type="System.Drawing.Size, System.Drawing">
     <value>217, 22</value>
@@ -344,12 +317,6 @@
   </data>
   <data name="miHighlightFirst.Text" xml:space="preserve">
     <value>最初をハイライト(&amp;F)</value>
-  </data>
-  <data name="miOperation.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 20</value>
-  </data>
-  <data name="miOperation.Text" xml:space="preserve">
-    <value>操作(&amp;O)</value>
   </data>
   <data name="btnNew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -454,5 +421,9 @@
   </data>
   <data name="btnPaste.Text" xml:space="preserve">
     <value>貼り付け(&amp;P)</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>Inherit</value>
   </data>
 </root>
